Fix interpolation of orphans and widows CSS properties https://bugs.webkit.org/show_bug.cgi?id=223124

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import interpolation tests for orphans and widows. These tests pass completely
weith 44 PASS results compared to prior to the source changes.

* web-platform-tests/css/css-break/animation/orphans-interpolation-expected.txt: Added.
* web-platform-tests/css/css-break/animation/orphans-interpolation.html: Added.
* web-platform-tests/css/css-break/animation/widows-interpolation-expected.txt: Added.
* web-platform-tests/css/css-break/animation/widows-interpolation.html: Added.

Source/WebCore:

The orphans and widows properties must be positive integers, so we add a dedicated
wrapper for these properties.

Tests: imported/w3c/web-platform-tests/css/css-break/animation/orphans-interpolation.html
       imported/w3c/web-platform-tests/css/css-break/animation/widows-interpolation.html

* animation/CSSPropertyAnimation.cpp:
(WebCore::PositivePropertyWrapper::PositivePropertyWrapper):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

Canonical link: https://commits.webkit.org/235250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274383 268f45cc-cd09-0410-ab3c-d52691b4dbfc